[package]
name = "ananke"
version = "3.0.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
anansi = { git = "https://github.com/Xqhare/anansi" }
nabu = { git = "https://github.com/Xqhare/nabu" }
horae = { git = "https://github.com/Xqhare/horae" }
talos = { git = "https://github.com/Xqhare/talos" }
areia = { git = "https://github.com/Xqhare/areia" }
brigid = { git = "https://github.com/Xqhare/brigid" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
